Bug 89007 - xf86-video-intel characters not echoed in terminal with tearfree enabled
Summary: xf86-video-intel characters not echoed in terminal with tearfree enabled
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-06 13:40 UTC by Chris Bainbridge
Modified: 2015-02-06 22:29 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log with debug (1.21 MB, application/x-bzip)
2015-02-06 15:22 UTC, Chris Bainbridge
no flags Details
Separate per-CRTC client bo from the TearFree cache (3.69 KB, patch)
2015-02-06 16:01 UTC, Chris Wilson
no flags Details | Splinter Review

Description Chris Bainbridge 2015-02-06 13:40:59 UTC
Upgraded to git 4c9af31

tearfree + xfce + terminator, press key, characters are not echoed to screen until user hits enter

Notes
  - using xterm instead of terminator, it works
  - using gnome, it works
  - turning off tearfree, it works

So this seems to be something specific to the combination tearfree + xfce + terminator
Comment 1 Chris Bainbridge 2015-02-06 14:06:42 UTC
2.99.917 works ok. Hardware is HD4000 Ivy Bridge.
Comment 2 Chris Wilson 2015-02-06 14:11:26 UTC
Updates appear immediately (no blinking cursor in terminator, no compositor, or with compositing, in xfce4) with TearFree on this SNB. Could you please attach you Xorg.0.log?

If you could think of anything else (probably trial and error) that's required to reproduce this, that would be helpful. However, the delay should be pretty clear in a full-debug log (./configure --enable-debug=full). Could you please attach a compressed debug log?
Comment 3 Chris Wilson 2015-02-06 14:11:45 UTC
(In reply to Chris Bainbridge from comment #1)
> 2.99.917 works ok. Hardware is HD4000 Ivy Bridge.

Even better. A git bisect would only take a few minutes. Do you mind?
Comment 4 Chris Bainbridge 2015-02-06 15:22:00 UTC
Created attachment 113226 [details]
Xorg.0.log with debug

3cfde9f04362a858ddfe7990109147e32eed516c is the first bad commit
commit 3cfde9f04362a858ddfe7990109147e32eed516c
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jan 13 13:50:08 2015 +0000

    sna: Only instantiate the frontbuffer on the GPU if used
    
    If we are a PRIME slave, we never need to allocate any memory for the
    frontbuffer, so skip the forced allocation during modesets.
Comment 5 Chris Wilson 2015-02-06 16:01:07 UTC
Created attachment 113227 [details] [review]
Separate per-CRTC client bo from the TearFree cache
Comment 6 Chris Bainbridge 2015-02-06 16:25:37 UTC
Patch works. Tested against latest 4c9af31 and all seems fine. Thanks.
Comment 7 Chris Wilson 2015-02-06 22:29:45 UTC
Thanks for the bug report and testing,

commit 934733e7c7e027e0bc73a6c102962b745ee3737a
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Feb 6 15:59:09 2015 +0000

    sna: Separate per-CRTC client bo from the TearFree cache
    
    Using the same member as both an override and a cache in different
    modes leads unsurprisingly to confusion.
    
    Fixes regression from
    commit 3cfde9f04362a858ddfe7990109147e32eed516c
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Tue Jan 13 13:50:08 2015 +0000
    
        sna: Only instantiate the frontbuffer on the GPU if used
    
    Reported-by: Chris Bainbridge <chris.bainbridge@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=89007
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.